Added Clair's buffalo image and some text to the homepage

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   password: <%= ENV['APP_DATABASE_PASSWORD'] %>
 
 development:
-  <<: *default
+  adapter: sqlite3
   database: rails_project_development
 
 # Warning: The database defined as "test" will be erased and
